tests/specs/check/module_not_found_npm_pkg_entrypoint/check.out
Check [WILDCARD]main.ts
TS7016 [ERROR]: Could not find a declaration file for module 'package'. '[WILDCARD]/node_modules/package/index.js' implicitly has an 'any' type.
import { Test } from "package";
                     ~~~~~~~~~
    at file://[WILDCARD]/main.ts:1:22

TS2307 [ERROR]: Cannot find module 'package/missing-js' or its corresponding type declarations.
import { Other } from "package/missing-js";
                      ~~~~~~~~~~~~~~~~~~~~
    at file://[WILDCARD]/main.ts:2:23

Found 2 errors.

error: Type checking failed.
